src/test/resources/Parser/SyntaxErrors/AccessForbidden.front
class A:
    private static int32 i;

class B:
    test() {
        A.i;
    }